Fix spacing

--- a/original/main.css
+++ b/original/main.css
@@ -79,9 +79,13 @@ td {
 	width: 3em;
 }
 
-#gatekeeper_domain, #gatekeeper_addr {width:100%;}
+#gatekeeper_domain, #gatekeeper_addr {
+	width: 100%;
+}
 
-#tbody_opt_addr {text-align: left;}
+#tbody_opt_addr {
+	text-align: left;
+}
 
 #tbl_limits input {width: 3em;}
 #tbl_limits th, #tbl_limits td {text-align: center;}
